Thu Nov 10 14:32:26 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * DevGuideExamples/DCPS/Messenger.minimal/Subscriber.cpp:

          Fuzz.

Wed Nov  9 22:48:22 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * docs/getting_started.odt:

          DataReaderListenerImpl explanation.

Wed Nov  9 19:37:05 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * DevGuideExamples/DCPS/Messenger.minimal/DataReaderListenerImpl.cpp:

          Remove extraneous includes.

        * docs/getting_started.odt:

          Formatting changes for Entity names.
          Start writing about DataReaderListenerImpl.cpp

Wed Nov  9 16:45:03 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * DevGuideExamples/DCPS/Messenger.minimal/Subscriber.cpp:

          Comments and formatting changes.

        * docs/getting_started.odt:

          Updates for Subscriber.cpp

Wed Nov  9 16:20:26 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * docs/getting_started.odt:

          Complete publisher.cpp explanation.

Wed Nov  9 15:40:07 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * DevGuideExamples/DCPS/Messenger.minimal/Publisher.cpp:

          Don't use atoi() directly.

Wed Nov  9 04:18:55 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * DevGuideExamples/DCPS/Messenger.minimal/Publisher.cpp:

          Fix typos, reformat

        * docs/getting_started.odt:

          Finsish publisher code description.

Tue Nov  8 23:06:03 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * DevGuideExamples/DCPS/Messenger.minimal/Boilerplate.h:
        * DevGuideExamples/DCPS/Messenger.minimal/Boilerplate.cpp:
        * DevGuideExamples/DCPS/Messenger.minimal/DataReaderListenerImpl.cpp:
        * DevGuideExamples/DCPS/Messenger.minimal/Publisher.cpp:

          Rename narrowXXX methods to narrow.

        * docs/getting_started.odt:

          Updates for publisher code.

Tue Nov  8 22:00:14 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>
